SFUSA/force-app/main/default/objects/Account_StoreGroup__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This identifies a record uniquely from Anaplan. Its a concatenation of 18-digit Account and StoeGroupId</description>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>